Metodos para mostrar detalles de cursos

--- a/src/main/resources/com/example/scenes/students_scenes/students_list_scene.fxml
+++ b/src/main/resources/com/example/scenes/students_scenes/students_list_scene.fxml
@@ -13,7 +13,7 @@
         </ToolBar>
     </top>
     <center>
-        <TableView fx:id="studentTable">
+        <TableView fx:id="tableView">
             <columns>
                 <TableColumn fx:id="idColumn" text="ID" />
                 <TableColumn fx:id="nameColumn" text="Nombre" />
