--- a/src/main/resources/com/example/scenes/teachers_scenes/teachers_list_scene.fxml
+++ b/src/main/resources/com/example/scenes/teachers_scenes/teachers_list_scene.fxml
@@ -9,7 +9,7 @@
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controllers.scenes_controllers">
     <top>
         <ToolBar>
-            <Button onAction="#switchToTeachersMenu" text="Salir" />
+            <Button onAction="#switchToTeachersMenu" text="Volver" />
         </ToolBar>
     </top>
     <center>
