--- a/src/main/resources/com/example/scenes/teachers_scenes/teachers_menu_scene.fxml
+++ b/src/main/resources/com/example/scenes/teachers_scenes/teachers_menu_scene.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="438.0" stylesheets="@../.Styles/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controllers.scenes_controllers">
     <children>
@@ -18,11 +18,11 @@
 
         <ButtonBar layoutX="330.0" layoutY="210.0" prefHeight="40.0" prefWidth="90.0" />
 
-        <Button layoutX="14.0" layoutY="106.0" onAction="#switchToUpdateTeacher" mnemonicParsing="false" prefHeight="26.0" styleClass="button" text="Actualizar profesor" />
-        <Button layoutX="14.0" layoutY="143.0" onAction="#switchToDeleteTeacher" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Eliminar profesor" />
-        <Button layoutX="150.0" layoutY="71.0" onAction="#switchToShowTeachers" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Listar profesores" />
-        <Button layoutX="14.0" layoutY="181.0" onAction="#switchToSearchTeacher" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Buscar profesor" />
-        <Button layoutX="14.0" layoutY="71.0"  onAction="#switchToCreateTeacher" mnemonicParsing="false"  prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Agregar profesor" />
+        <Button layoutX="15.0" layoutY="106.0" mnemonicParsing="false" onAction="#switchToUpdateTeacher" prefHeight="27.0" prefWidth="127.0" styleClass="button" text="Actualizar profesor" />
+        <Button layoutX="14.0" layoutY="143.0" mnemonicParsing="false" onAction="#switchToDeleteTeacher" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Eliminar profesor" />
+        <Button layoutX="150.0" layoutY="71.0" mnemonicParsing="false" onAction="#switchToShowTeachers" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Listar profesores" />
+        <Button layoutX="14.0" layoutY="181.0" mnemonicParsing="false" onAction="#switchToSearchTeacher" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Buscar profesor" />
+        <Button layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#switchToCreateTeacher" prefHeight="26.0" prefWidth="127.0" styleClass="button" text="Agregar profesor" />
         <Button layoutX="346.0" layoutY="216.0" mnemonicParsing="false" onAction="#switchToScene1" styleClass="button" text="Volver" />
     </children>
 </AnchorPane>
